--- a/style/style.css
+++ b/style/style.css
@@ -65,9 +65,119 @@ nav li a {
     color: #727272;
     font-size: 16px;
     font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
 }
 
 .btn-primary {
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    color: #fff;
+    font-size: 1.25rem;
+    border: 0;
+    cursor: pointer;
+}
+
+.banner-image {
+    margin-top: 20px;
+    width: 100%;
+}
+
+
+
+
+/* main style */
+main {
+    max-width: 1440px;
+    margin: 70px auto;
+}
+
+/* team style  */
+.team-container {
+    display: flex;
+    align-items: center;
+
+}
+
+.team-image-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+
+}
+
+.team-content {
+    padding-right: 70px;
+    padding-left: 70px;
+
+}
+
+.team-content-title {
+    font-size: 3rem;
+
+}
+
+.quick-list {
+    color: #727272;
+    font-weight: 500;
+}
+
+.text-freatures {
+    color: #FF900E;
+    font-weight: 700;
+}
+
+.team-content-description {
+    color: #727272;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+
+}
+
+
+
+/* Responsive Style */
+/* Responsive Style */
+/* Mobile devices */
+@media screen and (max-width:576px) {
+
+    header {
+        padding: 20px;
+    }
+
+    nav, .team-container {
+        flex-direction: column;
+    }
+
+    .team-image-container{
+        grid-template-columns: 1fr;
+    }
+
+    .team-content {
+        padding-right: 20px;
+        padding-left: 20px;
+    
+    }
+}
+
+
+/* tablet or medium devices */
+
+@media screen and (min-width:576px) and (max-width:960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav , .team-container {
+        flex-direction: column;
+        /* margin-top: 20px; */
+        margin-bottom: 20px;
+
+    }
     
 }
