--- a/style/style.css
+++ b/style/style.css
@@ -139,6 +139,107 @@ main {
 
 }
 
+/* feaures  */
+
+
+
+.features {
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+
+.features-title {
+    color: #131313;
+
+    font-size: 2rem;
+
+    font-weight: 700;
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+
+}
+
+.feature-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+.feature-image img{
+    height: 90%;
+    margin-left: 50px;
+}
+
+
+.tenyears {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 200px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+
+}
+.tenyears .h2{
+    font-size: 4rem;
+    margin: 0;
+}
+.tenyears p{
+    font-size: 1.5rem;
+}
+
+/* facts section container */
+
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px 30px;
+
+}
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.facts-card-container .card-title {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 5px;
+}
+
+
+
+/* sponsors style 
+ */
+.sponsors {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.sponsors-image-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 50px;
+    gap: 40px;
+}
+
+.sponsors-image-container img {
+    width: 165px;
+}
 
 
 /* Responsive Style */
@@ -150,18 +251,38 @@ main {
         padding: 20px;
     }
 
-    nav, .team-container {
+    nav,
+    .team-container , .features{
         flex-direction: column;
     }
 
-    .team-image-container{
+    .team-image-container {
         grid-template-columns: 1fr;
     }
 
-    .team-content {
+    .team-content,
+    .facts-card-container  {
         padding-right: 20px;
         padding-left: 20px;
-    
+
+    }
+    .feature-image img{
+        width: 90%;
+        margin: 0;
+    }
+    .tenyears{
+        position: static;
+        width: 150px;
+    }
+
+    .facts-card-container {
+        flex-direction: column;
+        gap: 20px
+    }
+
+    .sponsors-image-container {
+        flex-direction: column;
+
     }
 }
 
@@ -173,11 +294,13 @@ main {
         padding: 50px;
     }
 
-    nav , .team-container {
+    nav,
+    .team-container,
+    .sponsors-image-container, .features {
         flex-direction: column;
         /* margin-top: 20px; */
         margin-bottom: 20px;
 
     }
-    
+
 }
